# SOMA

my_msgs/: CMakeLists.txt  package.xml
ur5e_project/Assets/: TableTopGrab.cs  msgbrowser_settings.asset
ur5e_project/Assets/Resources/: ROSConnectionPrefab.prefab
ur5e_project/Assets/RosMessages/Moveit/msg/: CollisionObjectMsg.cs  ContactInformationMsg.cs  MotionPlanRequestMsg.cs  MoveItErrorCodesMsg.cs  PipelineStateMsg.cs  PositionConstraintMsg.cs  PositionIKRequestMsg.cs  ServoStatusMsg.cs  WorkspaceParametersMsg.cs
ur5e_project/Assets/RosMessages/My/msg/: SceneObjectsMsg.cs
ur5e_project/Assets/Samples/XR Interaction Toolkit/2.4.3/Starter Assets/: XRI Default Gaze Controller.preset  XRI Default Input Actions.inputactions
ur5e_project/Assets/Scenes/: SampleScene.unity
ur5e_project/Assets/Scripts/: CollisionObjManager.cs  GripperManager.cs  OrientationBuffer.txt  PlanningScenePush.cs  PublishObstacles.cs  PublishSingleCubeExample.cs  PublisherNextGoal.cs  PublisherNextGoalFAILED.txt  PublisherObstaclesFailed.cs  ROSTopicBasedControlPlugin.cs  RosUnityConverter.cs  SceneObjectsSubscriber.cs
ur5e_project/Assets/XR/: XRGeneralSettingsPerBuildTarget.asset
ur5e_project/Assets/XR/Settings/: OpenXR Package Settings.asset
ur5e_project/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset  TagManager.asset
ur5e_project/UserSettings/Layouts/: default-2022.dwlt
