<?xml version="1.0"?>
<package format="3">
  <name>my_msgs</name>
  <version>0.0.0</version>
  <description>Custom messages</description>

  <!-- REQUIRED -->
  <maintainer email="filip@example.com">Filip</maintainer>
  <license>MIT</license>

  <!-- This is what you are missing -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <!-- Build dependencies for message generation -->
  <buildtool_depend>ament_cmake</buildtool_depend>
  <build_depend>rosidl_default_generators</build_depend>

  <!-- For using generated messages -->
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Export message interfaces -->
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
